# WiktionaryParser

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  wiktionaryparser.py
scripts/: create_test_output_json.py  download_wiktionary_test_files.py
tests/: test.py  test_core.py
tests/markdown_files/: house-50356446-multiline.md  house-50356446.md
wiktionaryparser/: __init__.py  core.py
