[tool.poetry]
name = "wiktionaryparser"
version = "0.0.96"
description = "A tool to parse word data from wiktionary.com into a JSON object"
authors = ["Suyash Behera <sne9x@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.20.0"
beautifulsoup4 = "4.4.0"
mwparserfromhell = "^0.5.4"

[tool.poetry.dev-dependencies]
deepdiff = "3.3.0"
parameterized = "0.7.4"
nox = "^2020.8.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
